# fbsm-core

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
core/: authentication.py  consts.py  exceptions.py  fields.py  gunicorn.conf.py  idempotency.py  models.py  open_post.py  permissions.py  rabbitmq.py  safe_request.py  swagger.py  utils.py
core/migrations/: 0001_initial.py  0002_alter_idempotency_request_alter_idempotency_response.py  0003_idempotency_help_data.py  0004_idempotency_applied_at_idempotency_rolled_back_at.py
core/notifications/: __init__.py  base.py  queues.py  services.py  types.py
project/: settings.py  urls.py
