[metadata]
name = fbsm-core-app
version = 0.1.0
description = Reusable FBSM core app
long_description = file: README.md
long_description_content_type = text/markdown
author = Kantai Maksat Batyrbekuly
author_email = kantaimaksat03@gmail.com
license = MIT
url = https://github.com/Maksat03/fbsm-core

classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    Django==5.1.8
    djangorestframework==3.16.0
    djangorestframework_simplejwt==5.5.0
    PyJWT~=2.9.0
    drf-spectacular==0.28.0
    requests==2.32.3
    pika==1.3.2
    django-environ==0.12.0
    environ==1.0
    tenacity==9.0.0
    pybreaker==1.2.0
    django-cors-headers==4.7.0